--- a/leads/templates/leads/lead_list.html
+++ b/leads/templates/leads/lead_list.html
@@ -6,9 +6,12 @@
               <div>
                 <h1 class="text-4xl text-grey-800">Leads</h1>
               </div>
-              <div>
-                <a class="text-gray-500 hover:text-blue-500" href="{% url 'leads:lead-create' %}">Create Lead</a>
-              </div>
+              {% if request.user.is_organizer %}
+                  <div>
+                    <a class="text-gray-500 hover:text-blue-500" href="{% url 'leads:lead-create' %}">Create Lead</a>
+                  </div>
+              {% endif %}
+
           </div>
     <div class="flex flex-wrap -m-4">
         {% for lead in leads %}
