--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h1>Enter your new password</h1>
 
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Login</button>
+    <button type="submit">Confirm new Password</button>
     <hr>
-    <a href="{% url 'reset-password' %}">Forget Password?</a>
 </form>
 
 {% endblock content %}
