--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -5,9 +5,9 @@
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Login</button>
+    <button type="submit">Reset Password</button>
     <hr>
-    <a href="{% url 'reset-password' %}">Forget Password?</a>
+    <a href="{% url 'login' %}">Already have an account?</a>
 </form>
 
 {% endblock content %}
